--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@media only screen and (min-width: 768px) {
+  .seccion1 p {
+    font-size: 20px;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,7 +40,7 @@ header nav div div {
 }
 
 .logo {
-  height: 60%;
+  height: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,10 +50,6 @@ header nav div div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .cards {
@@ -62,6 +64,22 @@ header nav div div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.card {
+  margin: 1rem 0rem;
+}
+
+.card p {
+  font-size: 15px;
+}
+
+.sobreMi {
+  background-color: #FDEDF7;
+}
+
+.sobreMi p {
+  text-align: center;
 }
 
 @font-face {
