--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -2,19 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: walburn;
 }
 a {
   text-decoration: none;
-  color: $color1 !important;
 }
 a:hover {
-  color: $color3 !important;
+  color: $color5 !important;
+  transform: scale(1.2);
 }
 header {
   nav {
-    background-color: $color2;
-    color: $color2;
+    background-color: $color1;
     font-size: 30px;
     div {
       div {
@@ -24,16 +22,13 @@ header {
   }
 }
 .seccion1 {
-  background-color: $color1;
-  text-align: center;
-  height: 50rem;
+  background-image: url(../imagenes/logo2.jpeg);
+  background-repeat:no-repeat;
+  background-size: 100% ;
+  background-position: center;
+  height: 20rem;
 }
-.logo {
-  height: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .productos {
   background-color: $color3;
   h2{
