--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,18 @@ header nav div div {
           justify-content: flex-end;
 }
 
-.seccion1 {
-  background-image: url(../imagenes/logo2.jpeg);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  height: 20rem;
+#logoMaquina {
+  width: 100%;
+  height: auto;
 }
 
+/*.seccion1 {
+  background-image: url(../imagenes/logo2.jpeg);
+  background-repeat:no-repeat;
+  background-size: 100% ;
+  background-position: center;
+  height: 20rem;
+}*/
 .productos {
   background-color: #C1EAE3;
 }
