--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -22,9 +22,7 @@ header {
   }
 }
 .seccion1{
-  background-image: url(../imagenes/logo2.jpeg);
-  background-repeat:no-repeat;
-  background-size: 100% ;
+  background-image: url(../imagenes/logo2.jpeg);  background-size: 100% ;
   background-position: center;
   height: 20rem;
 }
