--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -24,6 +24,7 @@ header {
 .seccion1{
   background-image: url(../imagenes/logo2.jpeg);  background-size: 100% ;
   background-position: center;
+  background-repeat: no-repeat;
   height: 20rem;
 }
 
