--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -54,6 +54,10 @@ header {
     padding: 0px;
   }
 }
+.card:hover{
+  background-color: rgb(221, 220, 220);
+  cursor: pointer;
+}
 .sobreMi {
   background-color: $color1;
   p {
