--- a/css/style.css
+++ b/css/style.css
@@ -118,11 +118,16 @@ footer {
   margin-right: 30px;
 }
 
+#carritoList li ul {
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
 #carritoList li a {
   color: #61577F;
 }
 
 .dropdown-menu[data-bs-popper] {
-  left: -150px;
+  left: -250px;
 }
 /*# sourceMappingURL=style.css.map */
