--- a/sass/_colores.scss
+++ b/sass/_colores.scss
@@ -1,5 +1,5 @@
-$color1: #FDEDF7;
-$color2: #61577F;
-$color3: #C1EAE3;
-$color4: #95459e;
-$color5: #390164;
+$color1: #FDC5F5;
+$color2: #F7AEF8;
+$color3: #B388EB;
+$color4: #8093F1;
+$color5: #390164;   
