--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,6 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  color: #FDC5F5 !important;
-}
-
 header nav {
   font-size: 30px;
 }
@@ -69,7 +65,7 @@ header nav div div {
   height: 60%;
   -o-object-fit: contain;
      object-fit: contain;
-  padding: 0rem 1rem;
+  padding: 1rem;
 }
 
 .card h5 {
@@ -88,8 +84,9 @@ header nav div div {
 }
 
 .card:hover {
-  background-color: #dddcdc;
   cursor: pointer;
+  -webkit-box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px white, 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
 .boton {
@@ -131,5 +128,18 @@ footer {
 
 .dropdown-menu[data-bs-popper] {
   left: -300px;
+}
+
+.cart {
+  position: fixed;
+  z-index: 1;
+}
+
+.fa-cart-shopping {
+  color: #390164;
+}
+
+.fa-cart-shopping:hover {
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
