--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -2,22 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
-body{
+body {
   background-color: #fdedf7;
 }
 a {
   text-decoration: none;
 }
-a:hover {
-  color: $color1 !important;
-  
-}
+
 header {
-  
   nav {
-    
     font-size: 30px;
     div {
       div {
@@ -27,14 +21,12 @@ header {
   }
 }
 
-
 .productos {
   background-color: $color1;
-  h2{
+  h2 {
     font-size: 30px;
     padding: 1rem;
   }
-  
 }
 .cards {
   display: flex;
@@ -45,31 +37,30 @@ header {
 .card {
   margin: 1rem 0rem;
   height: 400px;
-  img{
+  img {
     height: 60%;
     object-fit: contain;
-    padding: 0rem 1rem;
-    
+    padding: 1rem;
   }
-  h5{
+  h5 {
     font-size: 1rem;
     text-align: center;
-    
   }
   p {
     font-size: 12px;
     text-align: center;
     padding: 0px;
   }
-  .card-body{
+  .card-body {
     overflow: hidden;
   }
 }
-.card:hover{
-  background-color: rgb(221, 220, 220);
+.card:hover {
   cursor: pointer;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
-.boton{
+.boton {
   background-color: $color5;
   border: none;
 }
@@ -79,32 +70,40 @@ header {
     text-align: center;
   }
 }
-.sobreMi{
-  h2{
+.sobreMi {
+  h2 {
     padding: 1rem;
     font-size: 30px;
   }
-  p{
+  p {
     font-size: 17px;
     padding: 2rem;
     margin-bottom: 0;
   }
 }
-footer{
+footer {
   background-color: $color2;
 }
-#carritoList{
+#carritoList {
   list-style: none;
-  li{
-    
-    ul{
+  li {
+    ul {
       max-height: 80vh;
       overflow-y: auto;
     }
-    
   }
 }
-.dropdown-menu[data-bs-popper]{
-  left: -300px
+.dropdown-menu[data-bs-popper] {
+  left: -300px;
 }
 
+.cart {
+  position: fixed;
+  z-index: 1;
+}
+.fa-cart-shopping{
+  color: $color5
+}
+.fa-cart-shopping:hover{
+  color: black
+}
