--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,8 @@ footer {
 .cart {
   position: fixed;
   z-index: 1;
+  top: 10px;
+  right: 10px;
 }
 
 .fa-cart-shopping {
@@ -141,5 +143,13 @@ footer {
 
 .fa-cart-shopping:hover {
   color: black;
+}
+
+#tbody th {
+  font-size: 10px;
+}
+
+#tbody th img {
+  width: 75%;
 }
 /*# sourceMappingURL=style.css.map */
