--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,6 @@ header nav div div {
           justify-content: flex-end;
 }
 
-.productos {
-  background-color: #FDC5F5;
-}
-
 .productos h2 {
   font-size: 30px;
   padding: 1rem;
@@ -95,7 +91,8 @@ header nav div div {
 }
 
 .sobreMi {
-  background-color: #FDC5F5;
+  background-color: #390164;
+  color: white;
 }
 
 .sobreMi p {
@@ -111,10 +108,6 @@ header nav div div {
   font-size: 17px;
   padding: 2rem;
   margin-bottom: 0;
-}
-
-footer {
-  background-color: #F7AEF8;
 }
 
 #carritoList {
